--- a/NotNull/NotNull.csproj
+++ b/NotNull/NotNull.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="NotNull.cs" />
     <Compile Include="NotNullExtension.cs" />
+    <Compile Include="NullGuardException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
